k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cat-flask-service
  labels:
    app: cat-flask
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: cat-flask
